Web Browser App: Add prefixes to CSS classes
Signed-off-by: Leonty Chudinov <lchudinov@rocketsoftware.com>

--- a/system-apps/web-browser-app/webClient/src/app/browser/address-bar/address-bar.component.scss
+++ b/system-apps/web-browser-app/webClient/src/app/browser/address-bar/address-bar.component.scss
@@ -17,19 +17,16 @@
   border-bottom: 1px solid #777777;
 }
 
-input[type="url"] {
+.zlux-wb-url {
   flex: 1 1 auto;
 }
 
-button {
+.zlux-wb-icon-button {
   flex: 0 0 3rem;
-}
-
-.icon-button {
   font-weight: 600;
 }
 
-.proxy {
+.zlux-wb-proxy {
   flex: 0 0 auto;
   width: 6rem;
   display: flex;
