--- a/system-apps/web-browser-app/webClient/src/app/browser/bookmark-button/bookmark-button.component.html
+++ b/system-apps/web-browser-app/webClient/src/app/browser/bookmark-button/bookmark-button.component.html
@@ -8,7 +8,7 @@
   Copyright Contributors to the Zowe Project.
 -->
 
-<button *ngIf="bookmarked" (click)="toggleBookmark()" class="bookmarked" title="Remove from bookmarks" i18n-title="tooltip|Title for 'Remove from bookmarks' button@@remove-from-bookmarks">
+<button *ngIf="bookmarked" (click)="toggleBookmark()" class="zlux-wb-bookmarked" title="Remove from bookmarks" i18n-title="tooltip|Title for 'Remove from bookmarks' button@@remove-from-bookmarks">
   &#10029;
 </button>
 <button *ngIf="!bookmarked" (click)="toggleBookmark()" title="Add to bookmarks" i18n-title="tooltip|Title for 'Add to bookmarks' button@@add-to-bookmarks">
