--- a/system-apps/web-browser-app/webClient/src/app/browser/browser-window/browser-window.component.html
+++ b/system-apps/web-browser-app/webClient/src/app/browser/browser-window/browser-window.component.html
@@ -10,7 +10,7 @@
 
 <iframe *ngIf="url else startPage" [src]="url"></iframe>
 <ng-template #startPage>
-  <div class="welcome">
+  <div class="zlux-wb-welcome">
     Welcome to Zowe Web Browser
   </div>
 </ng-template>
