--- a/virtual-desktop/src/app/authentication-manager/login/login.component.html
+++ b/virtual-desktop/src/app/authentication-manager/login/login.component.html
@@ -33,12 +33,12 @@
     </form>
     <p class="login-error">{{errorMessage || "&nbsp;"}}</p>
     <div class="fa fa-spinner fa-spin fa-5x" [hidden]="!isLoading"></div>
-    <button [hidden]="!expiredPassword && !changePassword" id="#loginButton"
+    <button [hidden]="!expiredPassword && !changePassword"
             class="login-button" (click)="attemptPasswordReset()" [disabled]="locked">
             {{this.expiredPassword ? this.translation.translate("Change Password") : this.translation.translate("SavePassword")}}
     </button>
     <div>
-      <button id="#loginButton"
+      <button
         class="login-button"
         (click)="attemptLogin()"
         [hidden]="!needLogin || expiredPassword"
