Added more translations for password reset and notification
Signed-off-by: Suneeth Keerthy <skeerthy@rocketsoftware.com>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/shared/snackbar/snackbar.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/shared/snackbar/snackbar.component.html
@@ -20,7 +20,7 @@
           </div>
       </div>
       <div class="snackbar-dismiss text-left">
-          <button class="snackbar-dismiss-button" (click)="snackBarRef.dismissWithAction()">Dismiss</button>
+          <button class="snackbar-dismiss-button" (click)="snackBarRef.dismissWithAction()">{{this.translation.translate("Dismiss")}}</button>
       </div>
   </div>
 </div>
