--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization-panel.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization-panel.component.html
@@ -10,12 +10,14 @@
 
 
 <div class="personalization-panel" (mouseenter)="panelMouseEnter()" (mouseleave)="panelMouseLeave()">
-    <ul class="personalization-panel-ul">
+    <ul class="personalization-panel-ul" *ngIf="showPanel">
       <li class="personalization-panel-li" *ngFor="let tool of personalizationTools" (click)="openTool(tool)">
         <img class="personalization-panel-item panel-item-{{tool.imgSrc}}"><br>
         <span class="personalization-panel-span">{{tool.title}}</span>
       </li>
     </ul>
+
+    <personalization-component *ngIf="showPanel == false"></personalization-component>
 </div>
 
 <!-- 
