Fixed small bug where Change Password screen wouldn't start
Signed-off-by: Leanid Astrakou <lastrakou@rocketsoftware.com>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization-panel.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization-panel.component.html
@@ -17,7 +17,7 @@
       </li>
     </ul>
 
-    <personalization-component *ngIf="showPanel == false"></personalization-component>
+    <personalization-component *ngIf="showPersonalization"></personalization-component>
 </div>
 
 <!-- 
