Fixed small top border offset + personalization setting work
Signed-off-by: Leanid Astrakou <lastrakou@rocketsoftware.com>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization-panel.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization-panel.component.html
@@ -9,7 +9,11 @@
 -->
 
 
-<div class="personalization-panel" (mouseenter)="panelMouseEnter()" (mouseleave)="panelMouseLeave()">
+<div class="personalization-panel" 
+  (mouseenter)="panelMouseEnter()" 
+  (mouseleave)="panelMouseLeave()"
+  [style.width]='this.panelWidth'
+  [style.maxWidth]='this.panelMaxWidth'>
     <ul class="personalization-panel-ul" *ngIf="showPanel">
       <li class="personalization-panel-li" *ngFor="let tool of personalizationTools" (click)="openTool(tool)">
         <img class="personalization-panel-item panel-item-{{tool.imgSrc}}"><br>
