--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization/personalization.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization/personalization.component.html
@@ -8,10 +8,11 @@
   Copyright Contributors to the Zowe Project.
 -->
 <div class="personalization-main-window">
+  <label class="personalization-label small">Back</label>
   <label class="personalization-label">Background</label>
-  <form action="/action_page.php">
+  <form action="/action_page.php" class="personalization-upload">
     <input type="file" id="myFile" name="filename">
-    <input type="submit">
+    <input type="submit" class="personalization-submit">
   </form>
   <label class="personalization-label">Color</label>
   <label class="personalization-label">Size</label>
