--- a/virtual-desktop/src/app/context-menu/context-menu.component.css
+++ b/virtual-desktop/src/app/context-menu/context-menu.component.css
@@ -64,7 +64,7 @@ li.disabled {
   white-space:nowrap;
   color: #f3f4f4;
   border-style: solid;
-  border-width: 0 1px 1px 1px;
+  border-width: 1px 1px 1px 1px;
   border-color: #3d3f42;
   cursor: pointer;
   position:relative;
