--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.html
@@ -14,7 +14,7 @@
 </div>
 
 <ng-template [ngIf]="isActive">
-  <div class="launch-widget-popup">
+  <div class="launch-widget-popup" (click)="setSearchFocus();">
     <div style="cursor: pointer" class="refresh-plugins" (click)="refresh()">
       {{translation.translate("Refresh Applications")}}
       <i style="padding: 5px" class="fa fa-refresh" (click)="refresh()"></i>
@@ -23,7 +23,8 @@
     <div #menudiv class="launch-menu-scroller">
         <div class="launch-widget-row" *ngFor="let item of displayItems | sortBy: 'label'; let i = index;"
         (click)="clicked(item)" [title]="item.tooltip" (contextmenu)="onRightClick($event, item)"
-          [class.active]="i==this.activeIndex" >
+          [class.active]="i==this.activeIndex" 
+          (mouseover)="this.activeIndex=i" >
           <img class="icon" [src]="item.image">
           <p>{{item.label}}</p>
         </div>
