Added login button id back, new name, for test pack
Signed-off-by: Suneeth Keerthy <skeerthy@rocketsoftware.com>

--- a/virtual-desktop/src/app/authentication-manager/login/login.component.html
+++ b/virtual-desktop/src/app/authentication-manager/login/login.component.html
@@ -38,7 +38,7 @@
             {{this.expiredPassword ? this.translation.translate("Change Password") : this.translation.translate("SavePassword")}}
     </button>
     <div>
-      <button
+      <button id="#org.zowe.zlux.ng2desktop_loginButton"
         class="login-button"
         (click)="attemptLogin()"
         [hidden]="!needLogin || expiredPassword"
