Added support for replacing background + icons + resetting to default
Signed-off-by: Leanid Astrakou <lastrakou@rocketsoftware.com>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization/personalization.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization/personalization.component.css
@@ -30,7 +30,14 @@
   float: right;
   position: absolute;
   margin-left: -105px;
-  margin-top: 0px;
+  margin-top: -5px;
+  cursor: pointer;
+}
+
+.personalization-label.small.back-button {
+  margin-top: -6px;
+  margin-left: -15px;
+  cursor: pointer;
 }
 
 .personalization-submit {
