--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.html
@@ -60,7 +60,15 @@
        [style.height]="widgetSize"
        [style.width]="widgetSize"
        (click)="toggleNotifications()">
-      <div [hidden]="notifications.length == 0"class="launchbar-tray-indicator">{{notifications.length}}</div>
+      <div 
+        [hidden]="notifications.length == 0"
+        class="launchbar-tray-indicator"
+        [style.height]="notifCountSize"
+        [style.width]="notifCountSize"
+        [style.margin-top]="notifTopOffset"
+        [style.margin-left]="notifLeftOffset">
+          {{notifications.length}}
+      </div>
   </div>
   <div #settingsicon class="launchbar-tray-icon settings"
        [style.margin-top]="widgetOffset"
