--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar/launchbar.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar/launchbar.component.html
@@ -12,7 +12,7 @@
 
 <div class="launchbar-container launchbar-large" id="container"
      [style.height]="barSize"
-     (mouseup)="onMouseUpContainer($event)" [class.active]="isActive" (contextmenu)="showBarOptions($event)">
+     (mouseup)="onMouseUpContainer($event)" [class.active]="isActive">
   <rs-com-launchbar-menu [menuItems]="allItems" [theme]="_theme" (itemClicked)="menuItemClicked($event)"  (refreshClicked)="getNewItems()"></rs-com-launchbar-menu>
   
   <div class="applist row" [style.margin]="applistMargin"
