Added back button functionality
Signed-off-by: Leanid Astrakou <lastrakou@rocketsoftware.com>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization/personalization.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization/personalization.component.html
@@ -9,7 +9,7 @@
 -->
 
 <div class="personalization-main-window">
-  <label class="personalization-label small back-button top">
+  <label class="personalization-label small back-button top" (click)="goBack()">
     <i class="fa fa-chevron-left" style="padding: 5px; font-size: large; padding-right: 7px; margin-top: 2px;">
     </i>Back</label>
 
