--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-icon/launchbar-icon.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-icon/launchbar-icon.component.html
@@ -10,10 +10,12 @@
   Copyright Contributors to the Zowe Project.
 -->
 <div class="launchbar-icon-container col-md-4" #launchbarIconContainer>
-  <zowe-launchbar-instance-view class="instance" *ngIf="launchbarItem.showInstanceView"
-                                [theme]="_theme"
-                                [launchbarItem]="launchbarItem"
-                                (mouseenter)="onMouseEnterInstanceView($event)"></zowe-launchbar-instance-view>
+  <zowe-launchbar-instance-view class="instance" 
+    *ngIf="launchbarItem.showInstanceView"
+    [theme]="_theme"
+    [launchbarItem]="launchbarItem"
+    (mouseenter)="onMouseEnterInstanceView($event)">
+  </zowe-launchbar-instance-view>
 <p *ngIf="launchbarItem.showIconLabel" class="launchbar-caption truncate"
    [style.bottom]="hoverBottom"
    [style.left]="hoverOffset">{{launchbarItem.label}}</p>
