Sync menu selections with current settings + slider bugfixes & smoothing
Signed-off-by: Leanid Astrakou <lastrakou@rocketsoftware.com>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization/personalization.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization/personalization.component.css
@@ -53,8 +53,11 @@
   cursor: pointer;
   border: none;
   padding: 60px;
-  border: 2px solid white;
   margin-right: 8px;
+}
+
+.personalization-preview-item.selected {
+  border: 2px solid white;
 }
 
 .personalization-preview-item.preview-small{
