--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/window/window.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/window/window.component.html
@@ -45,32 +45,42 @@
 
   <!-- Window control bar -->
   <div [class.inactive]="!hasFocus()" class="heading"
-       [style.background]="hasFocus() ? color.windowColorActive : color.windowColorInactive"
-       [style.height]="headerSize+'px'" (mousedown)="requestFocus()">
+    [style.background]="hasFocus() ? color.windowColorActive : color.windowColorInactive"
+    [style.height]="headerSize+'px'" (mousedown)="requestFocus()">
     <div class="caption handle"
-         [style.font-size]="textSize"
-         [style.color]="hasFocus() ? color.windowTextActive : color.windowTextInactive"
-         [style.padding-top]="textPad"
- #dragHandle>{{getTitle()}}</div>
-    <div class="close-button" [style.top]="buttonTop"
-         [class.active]="hasFocus()"
-         [style.left]="closeLeft"
-         [style.background-size]="buttonSize" (click)="close()"></div>
-    <div class="minimize-button" [style.top]="buttonTop"
-         [class.active]="hasFocus()"
-         [style.background-size]="buttonSize"
-         [style.left]="minimizeLeft"
-         (click)="minimizeToggle()"></div>
-    <div class="maximize-button" [style.top]="buttonTop"
-         [class.active]="hasFocus()"
-         [style.left]="maximizeLeft"
-         [style.background-size]="buttonSize" (click)="maximizeToggle()" [class.maximized]="isMaximized()"></div>
+      [style.font-size]="textSize"
+      [style.color]="hasFocus() ? color.windowTextActive : color.windowTextInactive"
+      [style.padding-top]="textPad"
+      #dragHandle>{{getTitle()}}</div>
+    <!-- For some reason style.filter doesn't work here, so we use ngStyle -->
+    <div class="close-button" 
+      [style.top]="buttonTop"
+      [class.active]="hasFocus()"
+      [style.left]="closeLeft"
+      [style.background-size]="buttonSize" 
+      [ngStyle]="{'filter': buttonFilter}"
+      (click)="close()"></div>
+    <div class="minimize-button" 
+      [style.top]="buttonTop"
+      [class.active]="hasFocus()"
+      [style.background-size]="buttonSize"
+      [style.left]="minimizeLeft"
+      [ngStyle]="{'filter': buttonFilter}"
+      (click)="minimizeToggle()"></div>
+    <div class="maximize-button" 
+      [style.top]="buttonTop"
+      [class.active]="hasFocus()"
+      [style.left]="maximizeLeft"
+      [style.background-size]="buttonSize"
+      [ngStyle]="{'filter': buttonFilter}"
+      (click)="maximizeToggle()" 
+      [class.maximized]="isMaximized()"></div>
   </div>
 
   <!-- Window body -->
   <div class="body"
-       [style.top]="headerSize+'px'"
-       (mousedown)="requestFocus()" #windowBody>
+    [style.top]="headerSize+'px'"
+    (mousedown)="requestFocus()" #windowBody>
     <com-rs-mvd-viewport [viewportId]="desktopWindow.viewportId" [attr.rs-com-viewport-id]="desktopWindow.viewportId">
       <!-- Loading display -->
       <div class="full-center">
