--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/window/window.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/window/window.component.html
@@ -58,21 +58,21 @@
       [class.active]="hasFocus()"
       [style.left]="closeLeft"
       [style.background-size]="buttonSize" 
-      [ngStyle]="{'filter': buttonFilter}"
+      [ngStyle]="hasFocus() ? {'filter': buttonFilter} : {}"
       (click)="close()"></div>
     <div class="minimize-button" 
       [style.top]="buttonTop"
       [class.active]="hasFocus()"
       [style.background-size]="buttonSize"
       [style.left]="minimizeLeft"
-      [ngStyle]="{'filter': buttonFilter}"
+      [ngStyle]="hasFocus() ? {'filter': buttonFilter} : {}"
       (click)="minimizeToggle()"></div>
     <div class="maximize-button" 
       [style.top]="buttonTop"
       [class.active]="hasFocus()"
       [style.left]="maximizeLeft"
       [style.background-size]="buttonSize"
-      [ngStyle]="{'filter': buttonFilter}"
+      [ngStyle]="hasFocus() ? {'filter': buttonFilter} : {}"
       (click)="maximizeToggle()" 
       [class.maximized]="isMaximized()"></div>
   </div>
