--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization/personalization.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization/personalization.component.html
@@ -46,7 +46,8 @@
   <div class="personalization-color-2">
     <color-slider 
       [color]="selectedColor" 
-      (onChange)="colorSelected($event.color)"
+      (onChange)="colorPreview($event.color)"
+      (onChangeComplete)="colorSelected($event.color)"
     ></color-slider>
   </div>
   <label class="personalization-label">Size</label>
