--- a/virtual-desktop/src/styles.css
+++ b/virtual-desktop/src/styles.css
@@ -99,6 +99,14 @@
   overflow-y: scroll
 }
 
+::selection {
+  background: #ffffff40 !important; /* WebKit/Blink Browsers */
+}
+
+::-moz-selection {
+  background: #ffffff40 !important; /* Gecko Browsers */
+}
+
 /*
   This program and the accompanying materials are
   made available under the terms of the Eclipse Public License v2.0 which accompanies
