Fixed a bug where context menu selection remains after mouse exits
Signed-off-by: Leanid Astrakou <lastrakou@rocketsoftware.com>

--- a/virtual-desktop/src/app/context-menu/context-menu.component.html
+++ b/virtual-desktop/src/app/context-menu/context-menu.component.html
@@ -30,6 +30,7 @@
           [class.disabled]="menuItem.disabled"
           (click)='itemClicked(menuItem); $event.stopPropagation();'
           (mouseover)="this.activeIndex=i; makeNavigable(); $event.stopPropagation();"
+          (mouseleave)="mouseLeave($event)"
         >
         <div
           class="menuitem-content"
