Fixed a bug where clicking "upload" would break Open in New Tab
Signed-off-by: Leanid Astrakou <lastrakou@rocketsoftware.com>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization/personalization.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization/personalization.component.html
@@ -27,7 +27,7 @@
     
     >
       <ng-template ngx-file-drop-content-tmp let-openFileSelector="openFileSelector">
-        <div *ngIf="files != []" style="color: white !important;">Drop or  &nbsp;<a href="#" (click)="openFileSelector()">upload</a>&nbsp;  wallpaper here.</div>
+        <div *ngIf="files != []" style="color: white !important;">Drop or  &nbsp;<a href="javascript:void(0);" (click)="openFileSelector()">upload</a>&nbsp;  wallpaper here.</div>
         <!-- <button type="button" (click)="openFileSelector()">Upload</button> -->
       </ng-template>
     </ngx-file-drop>
