Added selection highlighting with better contrast
Signed-off-by: Leanid Astrakou <lastrakou@rocketsoftware.com>

--- a/virtual-desktop/src/styles.css
+++ b/virtual-desktop/src/styles.css
@@ -99,12 +99,14 @@
   overflow-y: scroll
 }
 
-::selection {
-  background: #ffffff40 !important; /* WebKit/Blink Browsers */
+::selection { /* WebKit/Blink Browsers */
+  background: #ffffffa6 !important;
+  color: black !important;
 }
 
-::-moz-selection {
-  background: #ffffff40 !important; /* Gecko Browsers */
+::-moz-selection { /* Gecko Browsers */
+  background: #ffffffa6 !important;
+  color: black !important;
 }
 
 /*
