Fixed highlighting + added new design for server timeout prompt
Signed-off-by: Leanid Astrakou <lastrakou@rocketsoftware.com>

--- a/virtual-desktop/src/styles.css
+++ b/virtual-desktop/src/styles.css
@@ -100,13 +100,13 @@
 }
 
 ::selection { /* WebKit/Blink Browsers */
-  background: #ffffffa6 !important;
-  color: black !important;
+  background: grey;
+  color: white;
 }
 
 ::-moz-selection { /* Gecko Browsers */
-  background: #ffffffa6 !important;
-  color: black !important;
+  background: grey;
+  color: white;
 }
 
 /*
