--- a/virtual-desktop/src/app/authentication-manager/login/login.component.css
+++ b/virtual-desktop/src/app/authentication-manager/login/login.component.css
@@ -180,7 +180,7 @@
 }
 
 .back-button {
-  font-family: 'Roboto-Medium', 'Roboto Medium', 'Roboto';
+  font-family: 'Roboto-Medium', 'Roboto Medium', 'Roboto', sans-serif;
   font-weight: 500;
   font-style: normal;
   font-size: 15px;
